# ChangeLog for app-text/texlive-core
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.102 2009/05/08 09:52:52 aballier Exp $

  08 May 2009; Alexis Ballier <aballier@gentoo.org>
  -texlive-core-2008-r4.ebuild:
  remove unused version

  03 May 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r5.ebuild:
  Marking texlive-core-2008-r5 ppc64 and ppc for bug 264601

  03 May 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r5.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #264601

  01 May 2009; Markus Meier <maekke@gentoo.org> texlive-core-2008-r5.ebuild:
  amd64/x86 stable, bug #264601

  01 May 2009; Jeroen Roovers <jer@gentoo.org> texlive-core-2008-r5.ebuild:
  Stable for HPPA (bug #264601).

*texlive-core-2008-r5 (29 Apr 2009)

  29 Apr 2009; Alexis Ballier <aballier@gentoo.org>
  +texlive-core-2008-r5.ebuild:
  Add xpdf patch for bug #264601 and set var/cache/fonts world writable by
  default, bug #266680

  18 Mar 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r4.ebuild:
  Marking texlive-core-2008-r4 ppc stable for bug 253551

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r4.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #253551

  13 Mar 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r4.ebuild:
  Marking texlive-core-2008-r4 ppc64 stable for bug 235551

  11 Mar 2009; Markus Meier <maekke@gentoo.org> texlive-core-2008-r4.ebuild:
  amd64 stable, bug #253551

  10 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r4.ebuild:
  Add ~arm/~s390/~sh

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  texlive-core-2008-r4.ebuild:
  x86 stable, bug 253551

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> texlive-core-2008-r4.ebuild:
  Stable for HPPA (bug #253551).

  27 Feb 2009; Ferris McCormick <fmccor@gentoo.org>
  texlive-core-2008-r4.ebuild:
  Sparc stable, part of Bug #253551.
