@@ -1,12 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/texlive-core-2008-r5.ebuild,v 1.5 2009/05/03 12:54:06 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/texlive-core-2008-r5.ebuild,v 1.6 2009/05/22 13:34:37 aballier Exp $
 
 EAPI=1
 
 inherit eutils flag-o-matic toolchain-funcs libtool autotools texlive-common prefix
 
-PATCHLEVEL="10"
+PATCHLEVEL="11"
 TEXMFD_VERSION="1"
 
 DESCRIPTION="A complete TeX distribution"
