@@ -1,6 +1,11 @@
 # ChangeLog for app-text/texlive-core
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.102 2009/05/08 09:52:52 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.103 2009/05/22 13:34:37 aballier Exp $
+
+  22 May 2009; Alexis Ballier <aballier@gentoo.org>
+  texlive-core-2008-r5.ebuild:
+  Add a fix for getline conflicts, glibc 2.10, by Constantin Baranov, bug
+  #270430
 
   08 May 2009; Alexis Ballier <aballier@gentoo.org>
   -texlive-core-2008-r4.ebuild:
